<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoryActivity">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="250dp"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonA"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/button_a" />

        <Button
            android:id="@+id/buttonB"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/button_b" />

        <Button
            android:id="@+id/buttonC"
            android:layout_height="100dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/button_c" />

        <Button
            android:id="@+id/buttonD"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/button_d" />

        <Button
            android:id="@+id/buttonE"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/button_e" />

        <Button
            android:id="@+id/buttonF"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/button_f" />

        <Button
            android:id="@+id/buttonG"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/button_g" />

        <Button
            android:id="@+id/buttonH"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/button_h" />

        <Button
            android:id="@+id/buttonI"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:text="@string/button_i" />

    </GridLayout>

    <TextView
        android:id="@+id/labelMemoryPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelMemoryPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>